5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1573_1560.log
== TEST (2019-03-13 15:32:01) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower))
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower))
-- EXECUTION TIME:
0.204716
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:12) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower))
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower))
                                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:15) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower))
-- EXECUTION TIME:
0.17731
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower))
                                                                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:25) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()))
-- EXECUTION TIME:
0.170899
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()))
                                                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:44) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.145395
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
